--- a/static/styles.css
+++ b/static/styles.css
@@ -32,7 +32,7 @@
 .nav-Bar{
     /* animation: 1s ease-out 0s 1 slideFromTop; */
     filter: drop-shadow(0 0 0.75rem black); 
-    z-index: 9;
+    z-index: 8;
     padding-top: 2vh;
     padding-bottom: 2vh;
     width:100vw;
@@ -61,10 +61,11 @@
 
 
 #other_font_logo{
-    z-index: 10;
+    z-index: 9;
     margin-left: 2vw;
     width: 20vw;
-    padding-bottom: 245vh;
+    padding-bottom: 100%;
+    height: 100%;
     position: relative;
     padding-top: 1vh;
     background-color: #FDFFFC;
@@ -105,6 +106,23 @@
     font-family: 'Quicksand';
 }
 
+#works_box{
+    animation: 1s ease-out 0s 1 slideFromTop;
+    text-align: center;
+    font-style: bold;
+    font-size: 7vw;
+    font-weight: 100%;
+    font-family: 'Quicksand';
+    text-transform: lowercase;
+    color: #FDFFFC;
+    background-color: #011627;
+    padding: 50px;
+    margin-right: 25%;
+    margin-left: 25%;
+    margin-bottom: 10px;
+    /* filter: drop-shadow(0 0 0.75rem crimson); */
+}
+
 #display_box_1{
     /* margin-top: -100px; */
     background-color: #F71735;
@@ -125,6 +143,7 @@
     width: 70%;
     height: 400px;
     padding-left: 400px;
+
 }
 
 
@@ -136,7 +155,6 @@
     width: 70%;
     height: 400px;
     padding-left: 400px;
-    margin-left: 330px;
 }
 
 .hidden{
@@ -160,16 +178,28 @@
 }
 
 #bottom-background{
+    margin-top: 10%;
+    position: absolute;
+    bottom: 0;
     border-bottom: #FDFFFC;
     background-color:#011627;
     color:#FDFFFC;
     padding: 10%;
+    width: 100%;
     font-style: bold;
     font-size: 2vw;
     font-family: 'Quicksand';
 
 }
+
+#page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
 .bottom_title{
+
+    z-index: 10;
     cursor: none;
     text-transform: uppercase;
     padding-bottom: 15px;
@@ -221,15 +251,22 @@
     background-color: #0072b1;
     color: white;
   }
+
   .fa-linkedin:hover{
     background-color: white;
     color: #0072b1;
   }
+
   .fa-instagram{
     background-color: #E4405F;
     color: white;
   }
+
   .fa-instagram:hover{
     background-color: white;
     color: #E4405F;
+  }
+
+  #works_page{
+    /* margin-top: -100; */
   }
