--- a/templates/index.html
+++ b/templates/index.html
@@ -4,24 +4,25 @@
 {% endblock %}
 
 {% block main %}
-<h1 id="into_part_bef">Hi, I'm</h1>
-<h1 id="intro_part"> Peter.</h1>
+<!-- <h1 id="into_part_bef">Hi, I'm</h1>
+<h1 id="intro_part"> Peter.</h1> -->
 
 
 <div id="intro_box_1">
-<h1>These are my projects, 
-    past and present.</h1>
+<h1>Here are my projects, check out what I have.</h1>
 </div>
 
+
 <div class="hidden" id="display_box_1">
-    <h1>Hi</h1>
+    <h1>Designs</h1>
 </div>
 
 <div class="hidden" id="display_box_2">
-    <h1>HI</h1>
+    <h1>Mockups</h1>
 </div>
 
 <div class="hidden" id="display_box_3">
-    <h1>HI</h1>
+    <h1>Coding Projects</h1>
+
 </div>
 {% endblock %}
