--- a/templates/works.html
+++ b/templates/works.html
@@ -4,5 +4,17 @@
 {% endblock %}
 
 {% block main %}
+<div id="works_page"></div>
 
+<div id="works_box">
+    <h1>Designs</h1>
+</div>
+
+<div id="works_box">
+    <h1>Mockups</h1>
+</div>
+
+<div id="works_box">
+    <h1>Coding Projects</h1>
+</div>
 {% endblock %}
