--- a/templates/about.html
+++ b/templates/about.html
@@ -2,8 +2,12 @@
 {% block title%}
     About Page
 {% endblock %}
-<h1>Who Am I?</h1>
-<h2>If you couldn't tell, my name is Peter Pich. I'm a Cambodian American currently a freshman at Harvard. </h2>
-{% block main %}
 
+{% block main %}
+<h1>Who Am I?</h1>
+<h2>If you couldn't tell, my name is Peter Pich. I'm a Cambodian American currently a freshman at Harvard.</h2>
+<h1>Passions</h1>
+<h2></h2>
+<h1>Passions</h1>
+<h2></h2>
 {% endblock %}
