--- a/templates/works.html
+++ b/templates/works.html
@@ -10,11 +10,23 @@
     <h1>Designs</h1>
 </div>
 
+<div id="design_content">
+    <img src="https://thumbs.dreamstime.com/b/cool-wallpapers-backgrounds-check-out-our-68126782.jpg" alt="Girl in a jacket">
+</div>
+
 <div id="works_box">
     <h1>Mockups</h1>
+</div>
+<div id="mockup_content">
+    <img src="https://thumbs.dreamstime.com/b/cool-wallpapers-backgrounds-check-out-our-68126782.jpg" alt="Girl in a jacket">
 </div>
 
 <div id="works_box">
     <h1>Coding Projects</h1>
 </div>
+
+<div id="coding_content">
+    <img src="https://thumbs.dreamstime.com/b/cool-wallpapers-backgrounds-check-out-our-68126782.jpg" alt="Girl in a jacket">
+</div>
+
 {% endblock %}
