--- a/templates/works.html
+++ b/templates/works.html
@@ -11,14 +11,84 @@
 </div>
 
 <div id="design_content">
-    <img src="https://thumbs.dreamstime.com/b/cool-wallpapers-backgrounds-check-out-our-68126782.jpg" alt="Girl in a jacket">
+    <div class="row">
+        <div class="column">
+          <img src="images/Gio.jpg">
+          <img src="rocks.jpg">
+          <img src="falls2.jpg">
+          <img src="paris.jpg">
+          <img src="nature.jpg">
+          <img src="mist.jpg">
+          <img src="paris.jpg">
+        </div>
+        <div class="column">
+          <img src="underwater.jpg">
+          <img src="ocean.jpg">
+          <img src="wedding.jpg">
+          <img src="mountainskies.jpg">
+          <img src="rocks.jpg">
+          <img src="underwater.jpg">
+        </div>
+        <div class="column">
+          <img src="wedding.jpg">
+          <img src="rocks.jpg">
+          <img src="falls2.jpg">
+          <img src="paris.jpg">
+          <img src="nature.jpg">
+          <img src="mist.jpg">
+          <img src="paris.jpg">
+        </div>
+        <div class="column">
+          <img src="underwater.jpg">
+          <img src="ocean.jpg">
+          <img src="wedding.jpg">
+          <img src="mountainskies.jpg">
+          <img src="rocks.jpg">
+          <img src="underwater.jpg">
+        </div>
+      </div>
 </div>
 
 <div id="works_box">
-    <h1>Mockups</h1>
+    <h1>Photos</h1>
 </div>
 <div id="mockup_content">
-    <img src="https://thumbs.dreamstime.com/b/cool-wallpapers-backgrounds-check-out-our-68126782.jpg" alt="Girl in a jacket">
+    <div class="row">
+        <div class="column">
+          <img src="wedding.jpg">
+          <img src="rocks.jpg">
+          <img src="falls2.jpg">
+          <img src="paris.jpg">
+          <img src="nature.jpg">
+          <img src="mist.jpg">
+          <img src="paris.jpg">
+        </div>
+        <div class="column">
+          <img src="underwater.jpg">
+          <img src="ocean.jpg">
+          <img src="wedding.jpg">
+          <img src="mountainskies.jpg">
+          <img src="rocks.jpg">
+          <img src="underwater.jpg">
+        </div>
+        <div class="column">
+          <img src="wedding.jpg">
+          <img src="rocks.jpg">
+          <img src="falls2.jpg">
+          <img src="paris.jpg">
+          <img src="nature.jpg">
+          <img src="mist.jpg">
+          <img src="paris.jpg">
+        </div>
+        <div class="column">
+          <img src="underwater.jpg">
+          <img src="ocean.jpg">
+          <img src="wedding.jpg">
+          <img src="mountainskies.jpg">
+          <img src="rocks.jpg">
+          <img src="underwater.jpg">
+        </div>
+      </div>
 </div>
 
 <div id="works_box">
@@ -26,7 +96,42 @@
 </div>
 
 <div id="coding_content">
-    <img src="https://thumbs.dreamstime.com/b/cool-wallpapers-backgrounds-check-out-our-68126782.jpg" alt="Girl in a jacket">
+    <div class="row">
+        <div class="column">
+          <img src="wedding.jpg">
+          <img src="rocks.jpg">
+          <img src="falls2.jpg">
+          <img src="paris.jpg">
+          <img src="nature.jpg">
+          <img src="mist.jpg">
+          <img src="paris.jpg">
+        </div>
+        <div class="column">
+          <img src="underwater.jpg">
+          <img src="ocean.jpg">
+          <img src="wedding.jpg">
+          <img src="mountainskies.jpg">
+          <img src="rocks.jpg">
+          <img src="underwater.jpg">
+        </div>
+        <div class="column">
+          <img src="wedding.jpg">
+          <img src="rocks.jpg">
+          <img src="falls2.jpg">
+          <img src="paris.jpg">
+          <img src="nature.jpg">
+          <img src="mist.jpg">
+          <img src="paris.jpg">
+        </div>
+        <div class="column">
+          <img src="underwater.jpg">
+          <img src="ocean.jpg">
+          <img src="wedding.jpg">
+          <img src="mountainskies.jpg">
+          <img src="rocks.jpg">
+          <img src="underwater.jpg">
+        </div>
+      </div>
 </div>
 
 {% endblock %}
