--- a/static/otherStyle.css
+++ b/static/otherStyle.css
@@ -224,7 +224,7 @@
     padding: 50px;
     margin-right: 25%;
     margin-left: 25%;
-    margin-bottom: 10%;
+    margin-top: 5%;
     /* filter: drop-shadow(0 0 0.75rem black); */
 }
 
@@ -239,4 +239,23 @@
     }
 }
 
+#mockup_content{
+    display: block;
+}
 
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create two equal columns that sits next to each other */
+  .column {
+    flex: 50%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+  }
