--- a/templates/about.html
+++ b/templates/about.html
@@ -6,8 +6,10 @@
 {% block main %}
 <h1>Who Am I?</h1>
 <h2>If you couldn't tell, my name is Peter Pich. I'm a Cambodian American currently a freshman at Harvard.</h2>
-<h1>Passions</h1>
+
+<h1>Cool Things About Me</h1>
 <h2></h2>
+
 <h1>Passions</h1>
 <h2></h2>
 {% endblock %}
