--- a/templates/works.html
+++ b/templates/works.html
@@ -13,8 +13,8 @@
 <div id="design_content">
     <div class="row">
         <div class="column">
-          <img src="images/Gio.jpg">
-          <img src="rocks.jpg">
+          <img src="https://images.pexels.com/photos/1482476/pexels-photo-1482476.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Gio">
+          <img src="/Assets/Gio.jpg" alt="Gio" style="width:128px;height:128px;">
           <img src="falls2.jpg">
           <img src="paris.jpg">
           <img src="nature.jpg">
