--- a/templates/works.html
+++ b/templates/works.html
@@ -13,9 +13,9 @@
 <div id="design_content">
     <div class="row">
         <div class="column">
-          <img src="https://images.pexels.com/photos/1482476/pexels-photo-1482476.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Gio">
-          <img src="/Assets/Gio.jpg" alt="Gio" style="width:128px;height:128px;">
-          <img src="falls2.jpg">
+          <img src="https://images.pexels.com/photos/1482476/pexels-photo-1482476.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Gio"/>
+          <img src="static/Assets/Gio.jpg" alt="Gio" style="width: 400px;height: auto"/>
+          <img src="static/Assets/Franco and Tommy.jpg" alt="Gio" style="width: 300px;height: auto"/>
           <img src="paris.jpg">
           <img src="nature.jpg">
           <img src="mist.jpg">
