--- a/templates/works.html
+++ b/templates/works.html
@@ -10,128 +10,32 @@
     <h1>Designs</h1>
 </div>
 
-<div id="design_content">
-    <div class="row">
-        <div class="column">
-          <img src="https://images.pexels.com/photos/1482476/pexels-photo-1482476.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Gio"/>
-          <img src="static/Assets/Gio.jpg" alt="Gio" style="width: 400px;height: auto"/>
-          <img src="static/Assets/Franco and Tommy.jpg" alt="Gio" style="width: 300px;height: auto"/>
-          <img src="paris.jpg">
-          <img src="nature.jpg">
-          <img src="mist.jpg">
-          <img src="paris.jpg">
-        </div>
-        <div class="column">
-          <img src="underwater.jpg">
-          <img src="ocean.jpg">
-          <img src="wedding.jpg">
-          <img src="mountainskies.jpg">
-          <img src="rocks.jpg">
-          <img src="underwater.jpg">
-        </div>
-        <div class="column">
-          <img src="wedding.jpg">
-          <img src="rocks.jpg">
-          <img src="falls2.jpg">
-          <img src="paris.jpg">
-          <img src="nature.jpg">
-          <img src="mist.jpg">
-          <img src="paris.jpg">
-        </div>
-        <div class="column">
-          <img src="underwater.jpg">
-          <img src="ocean.jpg">
-          <img src="wedding.jpg">
-          <img src="mountainskies.jpg">
-          <img src="rocks.jpg">
-          <img src="underwater.jpg">
-        </div>
-      </div>
+<div class="image-grid">
+    <img src="static/Assets/Gio.jpg" alt="Gio" />
+    <img src="static/Assets/Gio.jpg" alt="Gio" />
+    <img  class="image-grid-row-2" src="static/Assets/Franco and Tommy.jpg" alt="Tommy and Franco Picture"/>
+    <img src="static/Assets/Gio.jpg" alt="Gio" /> 
 </div>
 
 <div id="works_box">
     <h1>Photos</h1>
 </div>
-<div id="mockup_content">
-    <div class="row">
-        <div class="column">
-          <img src="wedding.jpg">
-          <img src="rocks.jpg">
-          <img src="falls2.jpg">
-          <img src="paris.jpg">
-          <img src="nature.jpg">
-          <img src="mist.jpg">
-          <img src="paris.jpg">
-        </div>
-        <div class="column">
-          <img src="underwater.jpg">
-          <img src="ocean.jpg">
-          <img src="wedding.jpg">
-          <img src="mountainskies.jpg">
-          <img src="rocks.jpg">
-          <img src="underwater.jpg">
-        </div>
-        <div class="column">
-          <img src="wedding.jpg">
-          <img src="rocks.jpg">
-          <img src="falls2.jpg">
-          <img src="paris.jpg">
-          <img src="nature.jpg">
-          <img src="mist.jpg">
-          <img src="paris.jpg">
-        </div>
-        <div class="column">
-          <img src="underwater.jpg">
-          <img src="ocean.jpg">
-          <img src="wedding.jpg">
-          <img src="mountainskies.jpg">
-          <img src="rocks.jpg">
-          <img src="underwater.jpg">
-        </div>
-      </div>
+<div class="image-grid">
+    <img src="static/Assets/Gio.jpg" alt="Gio" />
+    <img src="static/Assets/Gio.jpg" alt="Gio" />
+    <img  class="image-grid-row-2" src="static/Assets/Franco and Tommy.jpg" alt="Tommy and Franco Picture"/>
+    <img src="static/Assets/Gio.jpg" alt="Gio" /> 
 </div>
 
 <div id="works_box">
     <h1>Coding Projects</h1>
 </div>
 
-<div id="coding_content">
-    <div class="row">
-        <div class="column">
-          <img src="wedding.jpg">
-          <img src="rocks.jpg">
-          <img src="falls2.jpg">
-          <img src="paris.jpg">
-          <img src="nature.jpg">
-          <img src="mist.jpg">
-          <img src="paris.jpg">
-        </div>
-        <div class="column">
-          <img src="underwater.jpg">
-          <img src="ocean.jpg">
-          <img src="wedding.jpg">
-          <img src="mountainskies.jpg">
-          <img src="rocks.jpg">
-          <img src="underwater.jpg">
-        </div>
-        <div class="column">
-          <img src="wedding.jpg">
-          <img src="rocks.jpg">
-          <img src="falls2.jpg">
-          <img src="paris.jpg">
-          <img src="nature.jpg">
-          <img src="mist.jpg">
-          <img src="paris.jpg">
-        </div>
-        <div class="column">
-          <img src="underwater.jpg">
-          <img src="ocean.jpg">
-          <img src="wedding.jpg">
-          <img src="mountainskies.jpg">
-          <img src="rocks.jpg">
-          <img src="underwater.jpg">
-        </div>
-      </div>
+<div class="image-grid">
+    <img src="static/Assets/Gio.jpg" alt="Gio" />
+    <img src="static/Assets/Gio.jpg" alt="Gio" />
+    <img  class="image-grid-row-2" src="static/Assets/Franco and Tommy.jpg" alt="Tommy and Franco Picture"/>
+    <img src="static/Assets/Gio.jpg" alt="Gio" /> 
 </div>
 
 {% endblock %}
