--- a/static/otherStyle.css
+++ b/static/otherStyle.css
@@ -23,6 +23,7 @@
 }
 
 #font_logo{
+    /* opacity: 10%; */
     margin-left: 5%;
     z-index: 9;
     position: fixed;
@@ -37,6 +38,11 @@
     font-size: 7vw;
     font-family: 'Quicksand';
 }
+
+#font_logo:hover{
+    opacity: 10%;
+}
+
 
 .nav-Bar{
     /* animation: 1s ease-out 0s 1 slideFromTop; */
@@ -68,7 +74,7 @@
 }
 
 
-
+/* 
 #other_font_logo{
     z-index: 9;
     margin-left: 2vw;
@@ -80,7 +86,7 @@
     background-color: #FDFFFC;
     color: #011627;
     font-style: bold;
-}
+} */
 
 
 .fa {
@@ -258,4 +264,36 @@
   .column img {
     margin-top: 8px;
     vertical-align: middle;
+  }
+
+  .image-grid{
+    --gap: 16px;
+    --num-cols: 4;
+    --row-height: 300px;
+
+    box-sizing: border-box;
+    padding: var(--gap);
+
+    display: grid;
+    grid-template-columns: repeat(var(--num-cols), 1fr);
+    grid-auto-rows: var(--row-height);
+    gap: var(--gap);
+  }
+  
+  .image-grid > img {
+    z-index: 7;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .image-grid-row-2 {
+    grid-row: span 2;
+    grid-column: span 2;
+  }
+  @media screen and (max-width: 1024px) {
+    .image-grid{
+        --num-cols: 2;
+        --row-height: 200px;
+    }
   }
