--- a/static/otherStyle.css
+++ b/static/otherStyle.css
@@ -40,7 +40,8 @@
 }
 
 #font_logo:hover{
-    opacity: 10%;
+    animation: becomeOpaque 1s;
+    animation-fill-mode: forwards;
 }
 
 
@@ -245,6 +246,16 @@
     }
 }
 
+@keyframes becomeOpaque {
+    0% {
+        opacity: 100%;
+    }
+
+    100%{
+        opacity: 10%;
+    }
+}
+
 #mockup_content{
     display: block;
 }
@@ -285,11 +296,20 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    filter: drop-shadow(0 0 0.35rem black); 
+  }
+
+  .image-grid-row-column-2 {
+    grid-row: span 2;
+    grid-column: span 2;
+  }
+
+  .image-grid-column-2 {
+    grid-column: span 2;
   }
 
   .image-grid-row-2 {
     grid-row: span 2;
-    grid-column: span 2;
   }
   @media screen and (max-width: 1024px) {
     .image-grid{
