--- a/templates/works.html
+++ b/templates/works.html
@@ -7,24 +7,46 @@
 <div id="works_page"></div>
 
 <div id="works_box">
-    <h1>Designs</h1>
+    <h1>Social Media Posts</h1>
 </div>
 
 <div class="image-grid">
+    <img  class="image-grid-row-column-2" src="static/Assets/ChairityPost2.jpg" alt="Tommy and Franco Picture"/>
+    <img src="static/Assets/chairity_corporate_partner.jpg" alt="chairity_corporate_partner" />
+    <img src="static/Assets/ChairityPost1.jpg" alt="ChairityPost1" />
+    <img class="image-grid-row-2" src="static/Assets/KELA DONATION BOX IMG1.jpg" alt="Tommy and Franco Picture"/>
     <img src="static/Assets/Gio.jpg" alt="Gio" />
-    <img src="static/Assets/Gio.jpg" alt="Gio" />
-    <img  class="image-grid-row-2" src="static/Assets/Franco and Tommy.jpg" alt="Tommy and Franco Picture"/>
-    <img src="static/Assets/Gio.jpg" alt="Gio" /> 
+    <img class="image-grid-row-2" src="static/Assets/KELA DONATION BOX IMG2.jpg" alt="chairity_corporate_partner" />
+    <img src="static/Assets/Halloween Em, Sam, and Franco.jpg" alt="Halloween Flicks" />
+    <img src="static/Assets/Jason Cape.jpg" alt="Jason with Cape" /> 
+    <img  class="image-grid-row-column-2" src="static/Assets/Franco and Tommy.jpg" alt="Tommy and Franco Picture"/>
+    <img src="static/Assets/Peter_parker_.jpg" alt="Spiderman" /> 
+    <img src="static/Assets/7D18D98E-18FC-45D5-A8EE-C236503882B9.JPG" alt="IG Post 1" />
+    <img src="static/Assets/47870E19-8EB3-4265-AD6A-495535DFD4C8.JPG" alt="IG Post 2" />
+    <img src="static/Assets/4CE43EA1-B0F5-48D0-BB62-0AEB18298FAC.JPG" alt="IG Post 3" />
+    <img src="static/Assets/6E3D1D28-A439-4C74-B14F-98C439C724BE.JPG" alt="IG Post 4" />
+    <img src="static/Assets/Post3.jpg" alt="IG Post 4" />
+
 </div>
 
 <div id="works_box">
-    <h1>Photos</h1>
+    <h1>Other Design Works</h1>
 </div>
 <div class="image-grid">
-    <img src="static/Assets/Gio.jpg" alt="Gio" />
-    <img src="static/Assets/Gio.jpg" alt="Gio" />
-    <img  class="image-grid-row-2" src="static/Assets/Franco and Tommy.jpg" alt="Tommy and Franco Picture"/>
-    <img src="static/Assets/Gio.jpg" alt="Gio" /> 
+    <img class="image-grid-row-2"  src="static/Assets/CPV_Sticker.jpg" alt="CPV_Sticker" />
+    <img src="static/Assets/gblogo2.jpg" alt="Goldbreak Logo" />
+    <img  class="image-grid-row-column-2" src="static/Assets/menüOrangeProto.png" alt="Menu Logo"/>
+    <img src="static/Assets/MurrayV1.jpg" alt="Murray Crest" /> 
+    <img class="image-grid-row-column-2" src="static/Assets/pichCrestv2.jpg" alt="Pich Logo"/> 
+    <img src="static/Assets/PPJads.jpg" alt="PPJads" /> 
+    <img src="static/Assets/salislogo.png" alt="Salis Logo" /> 
+    <img src="static/Assets/theidealmasklogo.png" alt=" Ideal Mask Logo" /> 
+    <img src="static/Assets/USFC.jpg" alt="Salis Logo" /> 
+    <img class="image-grid-column-2" src="static/Assets/ziruLogo.png" alt="Ziru Logo" /> 
+
+   
+      
+
 </div>
 
 <div id="works_box">
@@ -32,6 +54,15 @@
 </div>
 
 <div class="image-grid">
+    <video width="320" height="300" controls>
+        <source src="static/Assets/menu_recording.mov" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+
+      <video width="320" height="300" controls>
+        <source src="static/Assets/Kela Website.mov" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
     <img src="static/Assets/Gio.jpg" alt="Gio" />
     <img src="static/Assets/Gio.jpg" alt="Gio" />
     <img  class="image-grid-row-2" src="static/Assets/Franco and Tommy.jpg" alt="Tommy and Franco Picture"/>
