--- a/templates/works.html
+++ b/templates/works.html
@@ -27,6 +27,15 @@
     <img src="static/Assets/6E3D1D28-A439-4C74-B14F-98C439C724BE.JPG" alt="IG Post 4" />
     <img src="static/Assets/Post3.jpg" alt="IG Post 4" />
 
+
+    <img src="static/Assets/Peter Portfolio From Imac/Artboard 1.jpg" alt="Page 1 Of HH post" /> 
+    <img src="static/Assets/Peter Portfolio From Imac/Artboard 2.jpg" alt="Page 2 Of HH post" /> 
+
+    <img src="static/Assets/Peter Portfolio From Imac/Game 6 unbroken.jpg" alt="Cavs Promo" /> 
+    <img  class="image-grid-row-column-2" src="static/Assets/Peter Portfolio From Imac/IMG_1550.PNG" alt="Math Offered" /> 
+    <img src="static/Assets/Peter Portfolio From Imac/PandaLoudout.jpg" alt="David Panda Face" /> 
+
+
 </div>
 
 <div id="works_box">
@@ -44,7 +53,19 @@
     <img src="static/Assets/USFC.jpg" alt="Salis Logo" /> 
     <img class="image-grid-column-2" src="static/Assets/ziruLogo.png" alt="Ziru Logo" /> 
 
-   
+    <img class="image-grid-row-2" src="static/Assets/Social Media Posts-01.png" alt="Gap Post 1" /> 
+    <img src="static/Assets/pg2 Gap.png" alt="Gape Page 2" /> 
+    <img src="static/Assets/Peter Portfolio From Imac/bostonTitle.jpg" alt="Boston Title" /> 
+
+    <img src="static/Assets/Social Media Posts-02.png" alt="Salis Logo" /> 
+    <img src="static/Assets/theLobstiePatty - Peter Pich.png" alt="Salis Logo" /> 
+    <img class="image-grid-column-2" src="static/Assets/pg1 Gap .png" alt="Gap Page 1" /> 
+
+    <img src="static/Assets/Peter Portfolio From Imac/Gio Logo.jpg" alt="gio Logo" /> 
+    <img src="static/Assets/Peter Portfolio From Imac/house^2rendering.jpg" alt="Salis Logo" /> 
+    <img src="static/Assets/Peter Portfolio From Imac/Screen Shot 2022-12-01 at 5.38.44 PM.png" alt="Pavilion Logo" /> 
+    <img src="static/Assets/Peter Portfolio From Imac/Upekkha.jpg" alt="Upekkha Logo" /> 
+    <img class="image-grid-column-2" src="static/Assets/Peter Portfolio From Imac/Ziru Logo.jpg" alt="Ziru Logo" /> 
       
 
 </div>
