--- a/templates/works.html
+++ b/templates/works.html
@@ -64,9 +64,15 @@
     <img src="static/Assets/Peter Portfolio From Imac/Gio Logo.jpg" alt="gio Logo" /> 
     <img src="static/Assets/Peter Portfolio From Imac/house^2rendering.jpg" alt="Salis Logo" /> 
     <img src="static/Assets/Peter Portfolio From Imac/Screen Shot 2022-12-01 at 5.38.44 PM.png" alt="Pavilion Logo" /> 
+    <iframe src= "static/Assets/ArchitecturePortfolioVersion3 copy.pdf" 
+    width="600" 
+    height="300">
+</iframe>
+
     <img src="static/Assets/Peter Portfolio From Imac/Upekkha.jpg" alt="Upekkha Logo" /> 
     <img class="image-grid-column-2" src="static/Assets/Peter Portfolio From Imac/Ziru Logo.jpg" alt="Ziru Logo" /> 
-      
+
+
 
 </div>
 
@@ -75,19 +81,20 @@
 </div>
 
 <div class="image-grid">
-    <video width="320" height="300" controls>
-        <source src="static/Assets/menu_recording.mov" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
+    <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.45.10 PM.png" alt="Gio" />
+    <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.45.27 PM.png" alt="Gio" />
+    <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.45.57 PM.png" alt="Gio" />
+    <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.46.06 PM.png" alt="Gio" />
+    <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.46.13 PM.png" alt="Gio" />
+    <img class="image-grid-column-2" src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.46.22 PM.png" alt="Gio" />
+    <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.46.32 PM.png" alt="Gio" />
+    <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.46.46 PM.png" alt="Gio" />
+    <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.46.53 PM.png" alt="Gio" />
 
-      <video width="320" height="300" controls>
-        <source src="static/Assets/Kela Website.mov" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    <img src="static/Assets/Gio.jpg" alt="Gio" />
-    <img src="static/Assets/Gio.jpg" alt="Gio" />
-    <img  class="image-grid-row-2" src="static/Assets/Franco and Tommy.jpg" alt="Tommy and Franco Picture"/>
-    <img src="static/Assets/Gio.jpg" alt="Gio" /> 
+    <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.46.59 PM.png" alt="Gio" />
+    <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.47.11 PM.png" alt="Gio" />
+    <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.47.27 PM.png" alt="Gio" />
+
 </div>
 
 {% endblock %}
