--- a/static/otherStyle.css
+++ b/static/otherStyle.css
@@ -1,3 +1,8 @@
+
+html * {
+  font-family: 'Quicksand';
+}
+
 #page-container {
     position: relative;
     min-height: 100vh;
@@ -166,6 +171,7 @@
     text-align: left;
     margin-top: 10vh;
     background-color: #F71735;
+    color: #FDFFFC;
     width: 70%;
     height: 400px;
     padding: 200px;
@@ -176,6 +182,7 @@
 
 #display_box_2{
     /* filter: drop-shadow(0 0 0.75rem #41ead4); */
+    color: #FDFFFC;
     text-transform: lowercase;
     text-align: left;
     margin-top: 10vh;
@@ -189,6 +196,7 @@
 
 #display_box_3{
     text-transform: lowercase;
+    color: #FDFFFC;
     /* filter: drop-shadow(0 0 0.75rem #ff9f1c); */
     margin-top: 10vh;
     background-color: #ff9f1c;
@@ -317,3 +325,63 @@
         --row-height: 200px;
     }
   }
+
+  .about_box{
+    font-family: 'Quicksand';
+    filter: drop-shadow(0 0 0.35rem black); 
+    background-color: #FDFFFC;
+    width: 100%;
+    padding-left:3%;
+    padding-right:3%;
+    border-radius: 2%;
+
+  }
+
+  .about_box > h1{
+    font-size: x-large;
+  }
+
+  /*  */
+
+  html, body, section {
+    block-size: 100%;
+  }
+  
+  html {
+    scroll-snap-type: y mandatory;
+  }
+  
+  section {
+    animation: 1s ease-out 0s 1 slideFromTop;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  section:nth-of-type(even) {
+    color: white;
+    background: black;
+  }
+  
+  section:nth-of-type(odd) {
+    color: black;
+    background: white;
+  }
+  
+  body {
+    margin: 0;
+    font-family: system-ui, sans-serif;
+    font-size: 4rem;
+  }
+
+  .close{
+    position:fixed;
+    top: 8px;
+    left: 16px;
+    color:#0072b1;
+  }
+
+  
