--- a/templates/works.html
+++ b/templates/works.html
@@ -95,6 +95,11 @@
     <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.47.11 PM.png" alt="Gio" />
     <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.47.27 PM.png" alt="Gio" />
 
+     <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.56.55 PM.png" alt="Gio" />
+    <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.57.06 PM.png" alt="Gio" />
+    <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.57.18 PM.png" alt="Gio" />
+    <img class="image-grid-column-2"src="static/Assets/Screenshots/Screen Shot 2023-01-04 at 7.57.27 PM.png" alt="Gio" />
+
 </div>
 
 {% endblock %}
