--- a/templates/index.html
+++ b/templates/index.html
@@ -13,16 +13,22 @@
 </div>
 
 
+<a href="/works">
 <div class="hidden" id="display_box_1">
-    <h1>Designs</h1>
+    <h1>Social Media Posts</h1>
 </div>
+</a>
 
+<a href="/works">
 <div class="hidden" id="display_box_2">
-    <h1>Mockups</h1>
+    <h1>Other Designs</h1>
 </div>
+</a>
 
+<a href="/works">
 <div class="hidden" id="display_box_3">
     <h1>Coding Projects</h1>
 
 </div>
+</a>
 {% endblock %}
