--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
         <div class="nav-Bar">
             <a href="/works"><button class="nav-item">work</button></a>
             <a href="/about"><button class="nav-item">about</button></a>
-            <a href="/contact"><button class="nav-item">contact</button></a>
+            <!-- <a href="/contact"><button class="nav-item">contact</button></a> -->
         </div>
         
             <a href="/"><h1 id="font_logo">Peter <br> Pich</h1></a>
